# sayintentionsaiml

./: .gitignore  ASSESSMENT_AND_ROADMAP.md  BACKLOG.md  GUARDRAILS.md  GUARDRAILS.template.md  HANDOFF.md  PROJECT_STATUS.md  README.md  TEAM_ONBOARDING.md  TEAM_STRUCTURE.md  xplane_proton_bridge.py
adapters/xplane/: CMakeLists.txt  PI_SayIntentions.py  README.md  exports.txt  overlay.py  setup_sdk.sh
adapters/xplane/src/: sayintentions_plugin.c  stratus_plugin.c
client/: requirements.txt
client/src/: main.py
client/src/core/: airport_manager.py  sapi_interface.py  sim_installer.py  speech_interface.py
client/src/core/providers/: base.py  cloud.py  (+2 more)
client/src/simapi/: file_watcher.py
client/src/ui/: __init__.py  comms_widget.py  main_window.py  settings_panel.py  status_panel.py  transmission_panel.py
client/src/web/: __init__.py  server.py
client/tests/: test_validation.py
docs/: ATC_EVALUATION.md  ATC_PHRASEOLOGY.md  ATC_REFERENCE.md  ATC_ROADMAP.md  LATENCY_BASELINE.md  LOCAL_VS_CLOUD.md  OFFLINE_ATC_HANDOFF.md  PHRASEOLOGY_GUIDE.md  PRIVACY.md  README_OFFLINE.md  REFERENCE_SOURCES.md  SAPI_FINDINGS.md  XPLANE_12_PLATFORM.md  XPLANE_EXTENSIONS.md
scripts/: check_regression.sh  setup_wine_sapi.sh  verify_local_backend.py
stratus-rs/: Cargo.toml
stratus-rs/stratus-core/: Cargo.toml
stratus-rs/stratus-core/src/: atc.rs  lib.rs  ollama.rs  streaming.rs  telemetry.rs  warmup.rs
stratus-rs/stratus-gui/: Cargo.toml
stratus-rs/stratus-gui/src/: app.rs  comlink.rs  main.rs  theme.rs
tests/: test_sapi_connection.py  test_sapi_websocket.py
(+1 files in other folders)
